# RepoRover

./: LICENSE  collect.py  pyproject.toml
reporover/: __init__.py  collect.py  experiemnt.py  get_commit_data.py  get_convention.py  parse.py  reporover.py  type.py
reporover/data/: count.py  gatorgrader.ftr
reporover/data/experiment/: 111.txt  139.txt  189.txt  335.txt  423.txt  428.txt  502.txt  563.txt  665.txt  69.txt
tests/: test_get_commit_data.py  test_get_convention.py
